--- a/constituent-with-profile/constituent-with-profile-api.yaml
+++ b/constituent-with-profile/constituent-with-profile-api.yaml
@@ -38,3 +38,5 @@ spec:
   system: constituent
   definition:
     $text: https://github.com/kennethlong/devcentric-test/blob/main/constituent-with-profile/swagger.json
+  consumesApis:
+    - constituent-search
