--- a/constituent-with-profile/constituent-with-profile-api.yaml
+++ b/constituent-with-profile/constituent-with-profile-api.yaml
@@ -38,5 +38,7 @@ spec:
   system: constituent
   consumesApis:
     - constituent-search
+  dependsOn: 
+    - constituent-search
   definition:
     $text: https://github.com/kennethlong/devcentric-test/blob/main/constituent-with-profile/swagger.json
