--- a/team-cm.yaml
+++ b/team-cm.yaml
@@ -9,4 +9,6 @@ spec:
     displayName: CM Team
     email: cmteam@example.com
     picture: https://example.com/groups/bu-infrastructure.jpeg
-
+  parent: its
+  children: [backstage, other]
+  members: [jdoe]
